--- a/06-analytics-engineering/jaffle/models/staging/jaffle/stg_models.yml
+++ b/06-analytics-engineering/jaffle/models/staging/jaffle/stg_models.yml
@@ -17,6 +17,9 @@ models:
       - name: user_id
       - name: order_date
       - name: status
+        tests:
+          - accepted_values:
+              values: ['palced', 'shipped', 'return_pending']
 
   - name: stg_jaffle__stripe_payments
     description: Staging model for Stripe payments
